<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_ps4"
            android:icon="@drawable/ic_menu_ps4"
            android:title="@string/nav_ps4" />
        <item
            android:id="@+id/nav_xbox"
            android:icon="@drawable/ic_menu_xbox"
            android:title="@string/nav_xbox" />
    </group>
    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_orders"
                android:title="@string/nav_orders" />
            <item
                android:id="@+id/nav_account"
                android:title="@string/nav_account" />
            <item
                android:id="@+id/nav_contact"
                android:title="@string/nav_contact" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>